# LFU_cache

./: CMakeLists.txt  README.md  data_on_optimisation.txt  data_on_optimisation_2.txt
include/: ideal_cache.hpp  lfu_cache.hpp
src/: ideal_cache.cpp  lfu_cache.cpp
test/: test.txt
